--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: Build the Docker Image
-      run: docker build . --file Dockerfile --tag igorceee/docker-project:$DEFAULT_TAG
+      run: docker build . --file Dockerfile --tag igorceee/docker-kii-project:$DEFAULT_TAG
 
     - name: Docker Push
-      run: docker push igorceee/docker-project:$DEFAULT_TAG
+      run: docker push igorceee/docker-kii-project:$DEFAULT_TAG
