--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,3 +28,6 @@ jobs:
 
     - name: Docker Push
       run: docker push igorceee/docker-kii-project:$DEFAULT_TAG
+      
+    - name: Docker Run
+      run: docker run -p 80:80 docker-kii-project
