--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=sql11.freemysqlhosting.net
+DB_HOST=eu-cdbr-west-03.cleardb.net
 DB_PORT=3306
-DB_DATABASE=sql11520434
-DB_USERNAME=sql11520434
-DB_PASSWORD=dhLiwCivEQ
+DB_DATABASE=heroku_6af402c3c413f8b
+DB_USERNAME=b63a8c5a32788e
+DB_PASSWORD=cbc2d0b8
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
