--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,5 +29,11 @@ jobs:
     - name: Docker Push
       run: docker push igorceee/docker-kii-project:$DEFAULT_TAG
       
+    - name: Build the Docker Image Latest
+      run: docker build -t docker-kii-project . --tag igorceee/docker-kii-project:latest
+
+    - name: Docker Push Latest
+      run: docker push igorceee/docker-kii-project:latest
+      
     - name: Build the stack
       run: docker-compose up -d
