--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -19,7 +19,7 @@ env:
   GKE_CLUSTER: autopilot-cluster-1    # Add your cluster name here.
   GKE_ZONE: europe-southwest1   # Add your cluster zone here.
   DEPLOYMENT_NAME: gke-test # Add your deployment name here.
-  IMAGE: static-site
+  IMAGE: docker-kii-project
 
 jobs:
   setup-build-publish-deploy:
