--- a/configMap.yaml
+++ b/configMap.yaml
@@ -15,7 +15,7 @@ data:
   SESSION_DRIVER: database
   DB_CONNECTION: mysql
   DB_DATABASE: heroku_6af402c3c413f8b
-  DB_HOST: mysql
+  DB_HOST: eu-cdbr-west-03.cleardb.net
   DB_PASSWORD: cbc2d0b8
   DB_PORT: "3306"
   DB_USERNAME: b63a8c5a32788e
