--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -74,5 +74,5 @@ jobs:
       run: |-
         ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
         ./kustomize build . | kubectl apply -f -
-        kubectl rollout status deployment/$IMAGE
+        kubectl rollout status deployment/docker-kii-project
         kubectl get services -o wide
