--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -18,7 +18,7 @@ env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
   GKE_CLUSTER: autopilot-cluster-1    # Add your cluster name here.
   GKE_ZONE: europe-southwest1   # Add your cluster zone here.
-  DEPLOYMENT_NAME: gke-test # Add your deployment name here.
+  DEPLOYMENT_NAME: docker-kii-project-deployment # Add your deployment name here.
   IMAGE: docker-kii-project
 
 jobs:
